adding main and classes for tests